# FlyAway

./: .gitignore  README.md
clientServer/: Main.java
ds/res/: pathmap.csv
ds/res/crt/: cert.pem  key.pem  keystore.jks
ds/src/: Util.java
ds/src/dbm/: DbmResponse.java
ds/src/net/eastern/FlyAway/: Main.java
ds/src/web/: FileHandler.java  ValidationHandler.java
ep/: CMakeLists.txt
ep/src/: main.cpp
frmwk/: package-lock.json  package.json
frmwk/src/: App.css  App.js
frmwk/src/component/: Panel.css  Panel.js
frmwk/wwwroot/js/: index.js
res/wwwroot/html/: index.html
res/wwwroot/js/: index.js
src/ds/: DMBAPI.java  Main.java  Util.java
src/ds/CLI/: HolyFuckingShitIHaveNoClueWhatToDoBecauseIHaveNotBeenProgrammedToDoThatYetException.java  Input.java  ShUtils.java
src/ds/dbm/: Dbm.java  DbmQueryType.java  DbmResponse.java
src/ds/web/: FileHandler.java  QueryHandler.java  RootHandler.java  Server.java  ValidationHandler.java
web/: php.ini  run.bat  run.sh
web/wwwroot/: index.css  index.php  loader.php  logout.php  template.php  validateToken.php
web/wwwroot/api/: api.js
web/wwwroot/components/: footer.html  header.html  titlemode  version
web/wwwroot/css/: stylesheet-default.css
web/wwwroot/deprecated/html/: index.html
web/wwwroot/deprecated/js/: index.js
web/wwwroot/img/: auth-flow-map.drawio  flyaway-title-icon.xcf
web/wwwroot/login/: index.css  index.js  index.php  result.php
web/wwwroot/private/: config.php  guid.php
web/wwwroot/sessions/: sess_06699cb42825c4ac24ecc8412edec544  sess_7f94607b55a88a81f7c34021047649c6
(+23 files in other folders)
